name:                servant-JuicyPixels
version:             0.1.0.0
homepage:            https://github.com/tvh/servant-JuicyPixels
license:             GPL-3
license-file:        LICENSE
author:              Timo von Holtz
maintainer:          tvh@tvholtz.de
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Servant.JuicyPixels
  build-depends:       base >=4.8 && <4.9
                     , bytestring
                     , http-media
                     , JuicyPixels >=3.2
                     , servant >=0.4 && <0.5
  hs-source-dirs:      lib
  default-language:    Haskell2010